# claude-code-data-hub

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/agents/analytics-engineer/: AGENT.md
.claude/agents/context-manager/: AGENT.md
.claude/agents/data-analyst/: AGENT.md
.claude/agents/data-engineer/: AGENT.md
.claude/agents/data-scientist/: AGENT.md
.claude/agents/error-coordinator/: AGENT.md
.claude/agents/leader/: AGENT.md
.claude/agents/results-reporter/: AGENT.md
.claude/skills/connection-bigquery/: SKILL.md
.claude/skills/connection-github/: SKILL.md
.claude/skills/connection-kb/: SKILL.md
.claude/skills/connection-linear/: SKILL.md
.claude/skills/connection-snowflake/: SKILL.md
.claude/skills/data-eda/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
catalog/: CLAUDE.md  README.md  johto.yml  kanto.yml
docs/: external-services.md  mcp.md  memory.md  orchestration.md  skills.md
hooks/: block_prod_ddl.sh  check_no_secrets.sh  first_time_init.sh  kb_prelude.sh  memory_consolidate.sh  uv_auto_add.sh
lib/kb/: CLAUDE.md  __init__.py  client.py  models.py  rerank.py  search.py
memory/: README.md  TEMPLATE.md
memory/gym-leader-analytics/: PROJECT.md
memory/johto-breeding-tracker/: PROJECT.md
memory/kanto-pokedex-pipeline/: PROJECT.md
memory/move-effectiveness-matrix/: PROJECT.md
memory/shiny-encounter-tracker/: PROJECT.md
plugins/: README.md
tests/: test_frontmatter.sh  test_integrity.sh  test_uv_auto_add.sh
(+22 files in other folders)
